CSPACE-282: updated Intake HTML (minor edits including adding top-most save button; correcting header image size; and changing save and cancel button colors) CSPACE-283: updated Create New landing page to resemble wireframe. All non-functioning areas of page are "disabled" and grayed out. Reinserted header. CSPACE-335: updated Object Entry HTML (minor edits including adding top-most save button; correcting header image size, and and changing save and cancel button colors) CSPACE-348: created Find And Edit landing page. This is loosely based on an outdated wireframe found here: http://wiki.collectionspace.org/download/attachments/11468837/findedit01.gif [Note: this wireframe is under development and the HTML might change accordingly.] NOJIRA: fixed small issue in header.html where IE inserts 1-2px spacing around images if it isn't immediately bounded with a enveloping div/element.

--- a/src/main/webapp/css/cspace.css
+++ b/src/main/webapp/css/cspace.css
@@ -10,12 +10,14 @@ table tr, table tr td, table tr th  {border:none; padding:4px; margin:0; text-al
 #name-header-login{}
 
 #title-bar {padding: 16px 0px 6px 0px; margin-left:10px; *padding:16px 0 0 0; }
-#title-bar.underline {border-bottom:1px solid #81C9E7;}
+#title-bar.underline {border-bottom:1px solid #81C9E7; padding-bottom:4px;}
 #title-bar .label {border-top:1px solid #81C9E7; font-size:12px; line-height: 13px; padding: 2px 0 5px 0; color: #9E9FA0;}
 #title-bar .title-bar-value {margin-bottom:3px;}
 #title-bar .label .label-text {width:400px; float:left;}
 
-#object-id-menu {padding: 0 0 0 10px; width:441px;}	
+#object-id-menu {padding: 0px 0 0 10px; width:441px; float:left;}
+#all-content-intake .upper-save {float:right;}
+.save-bar {padding:0px 0 10px 0; clear:both;}
 
 .fl-tabs {margin:0 0 2px 0; *margin-bottom:3px; border:0 none #000; text-align:center; padding:0;}
 .fl-tabs li {list-style-type:none; display:inline;}
@@ -82,13 +84,12 @@ ul.cssmenu li.mycs a.selected {background-position: -671px -29px;}
 .fl-container-left   {width: 748px;}
 .fl-container-pivot {width: 248px;}
 
-.fl-container-left .upper-save {float:right; margin:-25px 0 0 0;}
- #all-content-intake .upper-save {float:right; margin:-25px 0 0 0;}
+.fl-container-left .upper-save {float:right;}
 .fl-container-left .object-entry-outer-border {border:none; padding: 0 0 10px 10px;}
 .fl-container-left .intake-outer-border {border: none; padding: 0 0 10px 10px;}
 .login-outer-border {border: none; padding:40px 0 10px 0px;}
 
-.fl-container-left  .information-group       {padding:10px 0;}
+.fl-container-left  .information-group       {padding:0 0 20px 0;}
 .fl-container-left  .information-subgroup {padding:10px 0;}
 .fl-container-left  .information-group       .content 	{border:none; background-color: #E7E8E9; padding: 6px 12px 6px 12px; *padding:6px 12px 0 12px; width:auto; display:block;}
 .fl-container-left  .information-subgroup .content 	{border:none; background-color: #D1D2D4; padding: 6px 12px 6px 12px; *padding:6px 12px 0 12px; width:auto; display:block;}
@@ -100,12 +101,17 @@ ul.cssmenu li.mycs a.selected {background-position: -671px -29px;}
 .fl-container-left  .information-group .radio-button	{padding-right: 20px; font-size:14px; line-height:14px;}
 .fl-container-left  .information-group .radio-button	input {border:none; }
 
-.object-entry .fl-container-pivot {padding-top:5px;}
+.object-entry .fl-container-pivot {padding-top:0px;}
 
 .fl-container-left .create-new-outer-border  {border: none; padding-left:10px; margin-right:10px;}
 .fl-container-left .create-new-outer-border .content {border: 1px solid #B5C7D3; background-color: #E7E8E9; padding: 12px 0 12px 12px; width:auto;}
 .fl-container-left .create-new-outer-border .header {padding:6px 0 4px 8px; width:auto; clear:both; font-size:16px; line-height:16px;}
 .fl-container-left .create-new-outer-border .information-group {padding: 15px 0 15px 0;}
+
+.fl-container-left .find-edit-outer-border  {border: none; padding-left:10px; margin-right:10px;}
+.fl-container-left .find-edit-outer-border .content {border: 1px solid #B5C7D3; background-color: #fff; padding: 6px 6px 12px 6px; width:auto;}
+.fl-container-left .find-edit-outer-border .header { width:auto; clear:both; font-size:16px; line-height:16px;}
+.fl-container-left .find-edit-outer-border .information-group {padding: 10px 0 10px 0;}
 
 .fl-container-pivot {padding-top:0px;}
 .create-new .fl-container-left .button {margin-right: 7px; float:left;}
@@ -143,6 +149,15 @@ ul.cssmenu li.mycs a.selected {background-position: -671px -29px;}
 .info-pair-table .info-value thead td {background-color:#F3F3F4; color:#3B3B3C; border:1px solid #BABABB; padding: 2px 1px 1px 2px;}
 .info-pair-table .info-value tbody td, .info-pair-addrow .info-value tbody th {border:1px solid #BABABB; padding: 1px 0 1px 0; *padding: 0;}
 .info-pair-table .info-value tbody td input {border:0; width:99.5%;}
+
+.find-edit-object-records .info-pair-table {width:100%; float:left; font-size:14px; line-height:16px;}
+.find-edit-object-records .info-pair-table .info-label {float:left; width:100%; padding-top: 2px; padding-bottom:0; *padding-bottom:0px; font-weight:bold; font-size:11px; color:# 0F75BC;}
+.find-edit-object-records .info-pair-table .info-value {float:left; width:100%; padding-top:1px; padding-bottom:0px; }
+.find-edit-object-records .info-pair-table .info-value table {width:696px; border-spacing:0; background-color:#FFF; font-size:12px; line-height:12px; margin-bottom:0;}
+.find-edit-object-records .info-pair-table .info-value thead tr  {background-color:#FFF; color:#3B3B3C; border:none; padding: 2px 1px 1px 2px;}
+.find-edit-object-records .info-pair-table .info-value thead td {border-collapse: collapse; background-color:#FFF; color:#3B3B3C; border:none; border-bottom:1px solid #BABABB; padding: 2px 1px 1px 2px;}
+.find-edit-object-records .info-pair-table .info-value tbody td {border:none; padding: 3px 0 3px 2px;}
+.find-edit-object-records .info-pair-table .info-value tbody tr:hover {background-color:#BFF4FF;}
 
 .info-pair-date {padding-bottom:2px;}
 .info-pair-date .info-label {padding-bottom:2px;}
@@ -208,6 +223,7 @@ textarea {overflow:auto;}
 .pivot-box {margin-bottom:10px; margin-top:10px; border-left:1px solid #C9CACC; border-right:1px solid #C9CACC; border-bottom:1px solid #C9CACC;}
 .pivot-box-content {font-size:10px; line-height:10px; color:#7F8083; border-top:1px solid #C9CACC;}
 .pivot-box-header {background-color:#B5C7D3; font-weight:bold; padding:3px 0 5px 8px; color:#000; font-size:12px; line-height:12px;}
+.pivot-box-label-pair {width:100%; clear:both;}
 .pivot-box-label {border-bottom:1px solid #C9CACC; padding:2px 0 2px 8px;}
 .pivot-box-label-1 , .pivot-box-label-2 , .pivot-box-label-3 {float:left;} 
 .integrated-authorities .pivot-box-label-1 {width:65%;}
@@ -256,12 +272,16 @@ textarea {overflow:auto;}
 .clear {clear:both; margin:0; padding:0; height:1px; overflow:hidden; visibility:hidden; display:block;}
 
 .input-buttons {width:100%; padding:1px 0 8px 0;}
-.savebutton, .cancelbutton, .viewbutton  {margin-right:8px; float:right; border-width: 0;}
+.savebutton, .cancelbutton, .viewbutton  {margin-left:8px; float:right; border:none;}
 .viewbutton {margin:0px; *margin-top:-24px; line-height:0;}
 .no-border {border-width:0; background-color: #F5F5F6;}
 .no-float {float:none;}
-.disabled {color: gray; background-color:gray;}
-.radio-button.disabled {color:gray; background-color:#E7E8E9;}
+
+.disabled {color: gray !important;}
+.content.disabled, .disabled td, .disabled tr {background-color:#ccc !important; color:#a0a0a0 !important;}
+.radio-button.disabled {color:gray; background-color:#E7E 8E9;}
+
+.overflow-find-edit {overflow-y:auto; overflow-x:hidden; max-height:144px;}
 
 .fl-widget {background: white; border: 1px solid black;}
 
@@ -277,10 +297,12 @@ opacity:0.5;
 }
 
 .cs-message {
-    background-color: #8DC73F;
+    background-color: #D1D2D4;
+	border:2px solid black;
     font-size: 1.2em;
     font-weight:bold;
     padding: 4px;
+	margin-bottom: 10px;
 }
 
 .hidden {
